# tcp-socket

./: .gitignore  CMakeLists.txt  README.md  client-input.txt  external Documentation.txt
tcp_client/: CMakeLists.txt  TcpClient.cpp  TcpClient.h  main.cpp
tcp_server/: CMakeLists.txt  TcpServer.cpp  TcpServer.h  main.cpp
utils/: CMakeLists.txt  socket_utils.cpp  socket_utils.h
